# mini-cognit-cli

./: .gitignore  LICENSE  README.md  architecture.dot  cognit.toml.example  index.html  pyproject.toml  script.js  style.css
.github/workflows/: publish.yml
src/cognit/: __init__.py  app.py  cli.py  config.py  sdk.py
src/cognit/llm/: __init__.py  generate.py  message.py  openai_provider.py  provider.py
src/cognit/soul/: agent.py  compaction.py  context.py  session.py  skills.py  toolset.py
src/cognit/tools/: fetch_url.py  file_read.py  file_write.py  glob_tool.py  grep.py  media_read.py  shell.py  web_search.py
src/cognit/ui/: terminal.py
tests/: test_sdk.py
