[project]
name = "mini-cognit-cli"
version = "0.1.0"
description = "A minimal CLI AI agent, inspired by kimi-cli architecture."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "prompt-toolkit>=3.0.40",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "tomlkit>=0.12.0",
    "tiktoken>=0.7.0",
    "duckduckgo-search>=7.0.0",
]

[project.scripts]
cognit = "cognit.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognit"]
