[project]
name = "mini-cognit-cli"
version = "0.1.0"
description = "A minimal AI agent — usable as both a CLI tool and a Python SDK."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "tomlkit>=0.12.0",
    "tiktoken>=0.7.0",
    "ddgs>=9.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
cli = [
    "prompt-toolkit>=3.0.40",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
cognit = "cognit.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognit"]
