[project]
name = "mini-cognit-cli"
version = "0.2.0"
description = "The AI coding agent you can read in an afternoon. ~2000 lines of Python, fully hackable."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "gxPan1006" },
]
keywords = ["ai", "agent", "cli", "coding", "llm", "openai", "hackable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.30.0",
    "tomlkit>=0.12.0",
    "tiktoken>=0.7.0",
    "ddgs>=9.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
cli = [
    "prompt-toolkit>=3.0.40",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/gxPan1006/mini-cognit-cli"
Repository = "https://github.com/gxPan1006/mini-cognit-cli"
Issues = "https://github.com/gxPan1006/mini-cognit-cli/issues"

[project.scripts]
cognit = "cognit.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognit"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
